Making tests for projects show page pass

--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,5 +1,5 @@
 <h1>Listing projects</h1>
 
-<%= @projects.each do |project| %>
-  project.title
-<% end %>
+  <ul>
+    <%= render @projects %>
+  </ul>
