--- a/app/views/layouts/shared/_nav.html.erb
+++ b/app/views/layouts/shared/_nav.html.erb
@@ -7,7 +7,7 @@
           <li class="<%= 'active' if current_page? root_path %>">
             <%= link_to 'Home', :root %>
           </li>
-          <li class="<%= 'active' if current_page? projects_path %>">
+          <li class="<%= 'active' if controller_name == 'projects' %>">
             <%= link_to 'Projects', :projects %>
           </li>
         </ul>
