Making user registration tests pass

--- a/app/views/layouts/shared/_nav.html.erb
+++ b/app/views/layouts/shared/_nav.html.erb
@@ -1,7 +1,7 @@
 <div class="navbar navbar-fixed-top">
   <div class="navbar-inner">
     <div class="container">
-      <a class="brand" href="#">CrowdfunderNextLevel</a>
+      <a class="brand" href="#">Crowdfunder-Next-Level</a>
       <div class="nav-collapse collapse">
         <ul class="nav">
           <li class="<%= 'active' if current_page? root_path %>">
@@ -11,6 +11,13 @@
             <%= link_to 'Projects', :projects %>
           </li>
         </ul>
+      </div>
+      <div class="pull-right">
+        <% if logged_in? %>
+          <%= link_to 'Logout', '#', class: 'btn' %>
+        <% else %>
+          <%= link_to 'Sign Up', [:new, :user], class: 'btn btn-primary' %>
+        <% end %>
       </div>
     </div>
   </div>
