--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,14 @@
 </head>
 <body>
   <%= render 'layouts/shared/nav' %>
+
   <div class="container">
+    <% if flash[:notice] %>
+      <div class="alert alert-success">
+        <%= flash[:notice] %>
+      </div>
+    <% end %>
+
     <%= yield %>
   </div>
 
