Trying to pass tests for login and logout and generating Pledge model with associations

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>CrowdfunderNextLevel</title>
+  <title>Crowdfunder</title>
   <%= stylesheet_link_tag    "application", :media => "all" %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
@@ -13,6 +13,10 @@
     <% if flash[:notice] %>
       <div class="alert alert-success">
         <%= flash[:notice] %>
+      </div>
+    <% elsif flash[:alert] %>
+      <div class="alert alert-error">
+        <%= flash[:alert] %>
       </div>
     <% end %>
 
