--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -7,7 +7,7 @@
   <div class="span6">
     <% unless f.object.errors.empty? %>
       <div class="alert alert-error">
-        <strong>Please Try Again:</strong><br/>
+        <strong>Try again:</strong><br/>
         <ul>
           <% f.object.errors.full_messages.each do |msg| %>
             <li><%= msg %></li>
