Writing tests for Pledge model

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,2 +1,2 @@
 <h1>Welcome to Crowdfunder-Next-Level</h1>
-<h3>Funding amazing projects to the Next Level</h3>
+<h3>Funding amazing projects to the Next Level!</h3>
