--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -5,16 +5,8 @@
 <%= form_for @user do |f| %>
 
   <div class="span6">
-    <% unless f.object.errors.empty? %>
-      <div class="alert alert-error">
-        <strong>Try again:</strong><br/>
-        <ul>
-          <% f.object.errors.full_messages.each do |msg| %>
-            <li><%= msg %></li>
-          <% end %>
-        </ul>
-      </div>
-    <% end %>
+    
+    <%= render 'shared/form_errors', :f => f %>
 
     <%= f.text_field :first_name, placeholder: "First Name", class: "input-block-level" %>
     <%= f.text_field :last_name, placeholder: "Last Name", class: "input-block-level" %>
