--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -6,7 +6,7 @@
 
   <div class="span6">
     
-    <%= render 'shared/form_errors', :f => f %>
+    <%= render 'layouts/shared/form_errors', :f => f %>
 
     <%= f.text_field :first_name, placeholder: "First Name", class: "input-block-level" %>
     <%= f.text_field :last_name, placeholder: "Last Name", class: "input-block-level" %>
