Making tests for my projects navigation pass

--- a/app/views/layouts/shared/_nav.html.erb
+++ b/app/views/layouts/shared/_nav.html.erb
@@ -1,15 +1,21 @@
 <div class="navbar navbar-fixed-top">
   <div class="navbar-inner">
     <div class="container">
-      <a class="brand" href="#">Crowdfunder-Next-Level</a>
+      <a class="brand" href="#">CrowdFunder</a>
       <div class="nav-collapse collapse">
         <ul class="nav">
-          <li class="<%= 'active' if current_page? root_path %>">
+          <li class="<%= 'active' if @nav == :home %>">
             <%= link_to 'Home', :root %>
           </li>
-          <li class="<%= 'active' if controller_name == 'projects' %>">
+          <li class="<%= 'active' if @nav == :projects %>">
             <%= link_to 'Projects', :projects %>
           </li>
+          <% if logged_in? %>
+            <li class="divider-vertical"></li>
+            <li class="<%= 'active' if @nav == :my_projects %>">
+              <%= link_to 'My Projects', [:my, :projects] %>
+            <li>
+          <% end %>
         </ul>
       </div>
       <div class="pull-right">
