Making tests for user mailer pass

--- a/app/views/layouts/shared/_nav.html.erb
+++ b/app/views/layouts/shared/_nav.html.erb
@@ -1,7 +1,7 @@
 <div class="navbar navbar-fixed-top">
   <div class="navbar-inner">
     <div class="container">
-      <a class="brand" href="#">CrowdFunder</a>
+      <a class="brand" href="#">Crowdfunder-Next-Level</a>
       <div class="nav-collapse collapse">
         <ul class="nav">
           <li class="<%= 'active' if @nav == :home %>">
