--- a/app/views/my/projects/index.html.erb
+++ b/app/views/my/projects/index.html.erb
@@ -1,9 +1,7 @@
-<h1>My Projects</h1>
+<h1>Listing projects</h1>
 
-<hr/>
+<ul>
+  <%= render @projects %>
+</ul>
 
-<div class="well">
-  <%= link_to '+ New Project', [:new, :my, :project], class: 'btn btn-small btn-primary pull-right' %>
-</div>
-
-<%= render @projects %>
+<%= paginate @projects %>
