--- a/app/views/my/projects/edit.html.erb
+++ b/app/views/my/projects/edit.html.erb
@@ -6,7 +6,10 @@
   <%= link_to [:my, :projects], :class => 'btn btn-small' do %>
     &laquo; My Projects
   <% end %>
-  <%= link_to 'Manage Images', [:my, @project, :images], :class => 'btn btn-small btn-primary pull-right' %>
+  <div class="pull-right">
+    <%= link_to 'Delete Project', [:my, @project], :method => :delete, :class => 'btn btn-small btn-danger', :confirm => "Are you sure?" %>
+    <%= link_to 'Manage Items', [:my, @project, :images], :class => 'btn btn-small btn-primary' %>
+  </div>
 </div>
 
 <%= form_for [:my, @project] do |f| %>
