--- a/app/assets/stylesheets/base.css.scss
+++ b/app/assets/stylesheets/base.css.scss
@@ -1,5 +1,19 @@
 @import "bootstrap";
 body {
-  padding-top: 60px;
+  padding-top: 50px;
+  font-family: "Open Sans", Arial, sans-serif;
+  font-size: 14px;
+  line-height: 24px;
+  font-weight: 400;
+  color: black;
+  background-image: url("beautiful-skies-thunder-cool.jpeg");
+  background-attachment: fixed;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+body > .container {
+  background-color: rgba(230, 230, 230, .5);
+  padding: 40px;
 }
 @import "bootstrap-responsive";
